# algoMaze

./: CMakeLists.txt  README.md
src/: bfs.cpp  bfs.h  config.h  main.cpp  mazeMap.cpp  mazeMap.h  startScreen.cpp  startScreen.h
